# yuta

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: code-quality.yml
app/: __init__.py  config.py  database.py  package-lock.json  register_blueprints.py  register_endpoints.py
app/controllers/: devices_controller.py  devices_controller.rest
app/endpoints/devices/: devices_blueprint.py
app/models/: chat.py  device.py
app/repositories/: chat_repository.py  devices_repository.py
app/templates/: base.html
app/templates/_components/: avatar.html  button.html  combobox.html  input_field.html  pins_selector.html  schedule_selector.html  sidebar.html  table.html
app/templates/chat/: chat_avatar.html  chat_bottombar.html  chat_header.html  chat_messages.html  chat_page.html  chat_record_audio_button.html
app/templates/devices/: add_device.html  add_device_page.html  edit_device.html  edit_device_page.html  list_devices.html  list_devices_page.html
app/usecases/: gusto.py  transcript_audio.py
app/views/: chat_view.py  devices_view.py  gpt.py
src/: __init__.py
